<resources>
    <string name="app_name">EasyStop</string>
    <string name="label_email" translatable="false">E-mail</string>
    <string name="img_logo">Logo image</string>
    <string name="button_login" translatable="false">Login</string>
    <string name="title_activity_main" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="name_app" translatable="false">EasyStop</string>
    <string name="title_activity_principal" translatable="false">PrincipalActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_about">About</string>
    <string name="lbl_descr_app">Hello, welcome to EasyStop. This is the app that will make life easier for those who
        are looking for parking lots near their destination.
    </string>
    <string name="logo_image">Logo image</string>
    <string name="label_password">Password</string>
    <string name="btn_cadastrese">Register</string>
    <string name="swt_manterConectado">Keep Connected</string>
    <string name="item_about">About</string>
    <string name="item_logout">LogOut</string>
    <string name="item_park">Parkings</string>
    <string name="item_mycars">My Vehicles</string>
    <string name="txt_mmy_vehicles">My Vehicles</string>
    <string name="btn_Add">Add</string>
    <string name="txt_montadora">Assembler</string>
    <string name="txt_modelo">Model</string>
    <string name="txt_ano">Year</string>
    <string name="txt_placa">Plate</string>
    <string name="title_register">Register</string>
    <string name="title_vehicles">My Vehicles</string>
    <string name="title_myVehicle">My Vehicle</string>
    <string name="logo_app_descr">Application Logo</string>
    <string name="item_userdata">My Data</string>
</resources>
