<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/item_park"
                android:icon="@drawable/ic_local_parking_black_24dp"
                android:title="@string/item_park"/>

        <item
                android:id="@+id/item_userdata"
                android:icon="@drawable/ic_people_outline_black_24dp"
                android:title="@string/item_userdata"/>


        <item
                android:id="@+id/item_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/item_about"/>

        <item
                android:id="@+id/item_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/item_logout"/>

        <!--<item-->
                <!--android:id="@+id/nav_gallery"-->
                <!--android:icon="@drawable/ic_menu_gallery"-->
                <!--android:title="Gallery"/>-->
        <!--<item-->
                <!--android:id="@+id/nav_slideshow"-->
                <!--android:icon="@drawable/ic_menu_slideshow"-->
                <!--android:title="Slideshow"/>-->
        <!--<item-->
                <!--android:id="@+id/nav_manage"-->
                <!--android:icon="@drawable/ic_menu_manage"-->
                <!--android:title="Tools"/>-->
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="Share"/>-->
            <!--<item-->
                    <!--android:id="@+id/nav_send"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
