<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" tools:layout_editor_absoluteY="81dp">

    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp" app:srcCompat="@mipmap/logo_easy_stop"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/img_logo"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:hint="@string/label_email"
            android:textColorHint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/colorAccent" android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail" android:hint="@string/label_password">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Switch
            android:text="@string/swt_manterConectado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swtConectado"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            style="@style/buttonStyled"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/swtConectado"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"/>
    <Button
            android:text="@string/btn_cadastrese"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCadastrar"
            style="@style/buttonStyled"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>