<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InformationActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtMontadora" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:hint="@string/txt_montadora" app:counterMaxLength="20">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMontadora"
            app:layout_constraintStart_toStartOf="@+id/txtMontadora"
            app:layout_constraintEnd_toEndOf="@+id/txtMontadora"
            android:id="@+id/txtModelo" android:hint="@string/txt_modelo">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtModelo"
            app:layout_constraintStart_toStartOf="@+id/txtModelo"
            app:layout_constraintEnd_toEndOf="@+id/txtModelo" android:id="@+id/txtAno" android:hint="@string/txt_ano">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAno"
            app:layout_constraintStart_toStartOf="@+id/txtAno"
            app:layout_constraintEnd_toEndOf="@+id/txtAno" android:id="@+id/txtPlaca" android:hint="@string/txt_placa">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/btn_Add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddCar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPlaca" app:layout_constraintStart_toStartOf="@+id/txtPlaca"
            app:layout_constraintEnd_toEndOf="@+id/txtPlaca"
            style="@style/buttonStyled"/>
</android.support.constraint.ConstraintLayout>